--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,22 +2,30 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
-  width: 300px;
+  flex-basis: 300px;
+  flex-shrink: 0;
   background: royalblue;
 }
 
@@ -25,4 +33,42 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+body,
+.main-section,
+.header,
+.footer,
+.card-section {
+  display: flex;
+}
+
+.card-section {
+  flex-wrap: wrap;
+  padding: 30px;
+  gap: 20px;
+}
+
+.main-section {
+  flex-grow: 1;
+}
+
+.sidebar a {
+  font-size: 24px;
+  text-decoration: none;
+  color: white;
+}
+
+.sidebar li {
+  list-style: none;
+  margin: 10px 20px;
+}
+
+.sidebar ul {
+  padding: 0;
+}
+
+.card {
+  flex-basis: 350px;
+  padding: 10px;
 }
